Added Savefile Import

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       #options {
         position: relative;
         z-index: 1;
-        width: 350px;
+        width: 360px;
       }
 
       h4 {
@@ -28,6 +28,14 @@
       }
 
       #showProjects {
+        margin-top: 1em;
+        margin-right: 0.8em;
+      }
+      #readFileButton {
+        margin-top: 1em;
+        margin-right: 0.8em;
+      }
+      #btnDel {
         margin-top: 1em;
       }
 
@@ -111,6 +119,8 @@
       src="https://unpkg.com/@mui/material@5.10.9/umd/material-ui.production.min.js"
     ></script>
     <script src="https://unpkg.com/flexsearch@0.7.31/dist/flexsearch.bundle.js"></script>
+    <script src="https://unpkg.com/pako/dist/pako.min.js"></script>
+    <script src="https://unpkg.com/json5@2/dist/index.min.js"></script>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
